Fixed the navbar and landing page image overlapping bug #138

--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -11,6 +11,7 @@
   width: 25vw;
   height: 25vw;
   transform: perspective(600px) rotateY(-25deg);
+  -webkit-transform: perspective(600px) rotateY(-25deg);
   opacity: 0.8;
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-left: 1px solid rgba(255, 255, 255, 0.5);
